--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.12.1",
     "howler": "^2.2.4",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sonner": "^2.0.3"
+    "sonner": "^2.0.3",
+    "tailwind-scrollbar": "^4.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
